# weighted_mtp

./: .cursorignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
configs/: README.md  defaults.yaml  recipe.baseline.yaml  recipe.rho1_weighted.yaml  recipe.verifiable.yaml
configs/baseline/: baseline.yaml  (+1 more)
docs/: 00_codebase_structure.md  00_ideal_structure.md  01_storage_preparation_plan.md  02_implementation_plan.md  03_phase1_detailed_plan.md  04_phase2_detailed_plan.md  05_phase3_detailed_plan.md  06_phase4_detailed_plan.md  07_rho1_refactoring_plan.md  08_phase6_detailed_plan.md  ARCHITECTURE.md  BFLOAT16_FLASH_ATTENTION_PLAN.md  DDP_TO_FSDP_MIGRATION.md  DOCKER.md  FSDP_MIGRATION_PLAN.md  MLFLOW.md  NIPA.md  PLAN_critic_best_practice.md  PLAN_evaluation_improvement.md  RESEARCH.md  SETUP.md  baseline_2gpu_hang_analysis.md  checkpoint_s3_optimization.md  codebase_structure.md  critic_token_analysis_implementation_plan.md  mlflow_integration.md  phase1_checklist.json  storage_preparation_plan.md  vessl_execution_guide.md  wmtp_research_proposal.md  wmtp_research_proposal.md
scripts/: README.md  cleanup_mlflow_experiments.py  convert_mtp_to_safetensors.py  debug_position_correlation.py  merge_lora_to_hf.py  merge_sft_for_value.py  parse_eval_results.py  regenerate_micro_model.py  run_all_evaluations.sh  setup_datasets.py  setup_mlflow.py  setup_models.py  setup_mtp_model.sh  sync_mtp_config.py  verify_final_mlflow_structure.py  verify_mlflow_ec2.py  verify_mtp_model.py  verify_storage.py
storage/: README.md
tests/: conftest.py
(+1538 files in other folders)
