[project]
name = "weighted-mtp"
version = "0.2.0"
description = "Weighted Multi-Token Prediction with Critic-based Value Weighting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.1.0",
    "safetensors>=0.4.0",
    "transformers>=4.35.0",
    "datasets>=2.15.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "mlflow>=2.9.0",
    "sentencepiece>=0.1.99",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "fairscale>=0.4.13",
    "omegaconf>=2.3.0",
    "boto3>=1.28.0",
    "psutil>=5.9.0",
    "nvidia-ml-py>=12.535.0",
    "vessl>=0.1.199",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.8",
    "black>=23.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/weighted_mtp", "vendor"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
markers = [
    "ddp: Tests requiring distributed training (torchrun required)",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
